Update 02. GET API.md

--- a/SpringBoot/02. GET API.md
+++ b/SpringBoot/02. GET API.md
@@ -8,7 +8,7 @@
 할 것인지, 쿼리를 사용할 것인지 바디를 사용할 것인지, 쿼리를 사용한다면 어떤 key를 이  
 용할 것인지, 결과는 어떤 형태로 줄 것인지를 고민해서 결정해야 한다.  
 이러한 것을  
-==API Specification(명세)== 줄여서 API 스펙 이라고도 한다.  
+API Specification(명세) 줄여서 API 스펙 이라고도 한다.  
 보통 이러한 스펙을 클라이언트 개발 담당자와 함께 정하게 된다. 현재는 연습이니 바로정해보자.  
 
 - HTTP Method : GET
