Update 09. 스프링 컨테이너 사용하는 이유.md

--- a/SpringBoot/09. 스프링 컨테이너 사용하는 이유.md
+++ b/SpringBoot/09. 스프링 컨테이너 사용하는 이유.md
@@ -84,14 +84,12 @@ public class BookMemoryRepository {
     ```
     
     1. BookRepository를 사용하는 코드가 100군데도 넘게 사용한다면. 모두 변경하여야함.
-    2. 스프링 컨테이너를 사용한다고 해보자. 그러면 컨테이너 BookMemoryRepository 혹은 BookMySqlRepository 중 하나를 선택한 후, BookService를 만들어줄 것이다. 이런 방식을 어려운 말로 제어의 역전 ==(IoC, Inversion of Control)==이라 부른다.
+    2. 스프링 컨테이너를 사용한다고 해보자. 그러면 컨테이너 BookMemoryRepository 혹은 BookMySqlRepository 중 하나를 선택한 후, BookService를 만들어줄 것이다. 이런 방식을 어려운 말로 제어의 역전 (IoC, Inversion of Control)이라 부른다.
     3. 이때 컨테이너가 BookService 를 만들어 줄 때 BookMemoryRepository 와  
         BookMySqlRepository 중 하나를 선택해서 넣어주는 과정을  
-        ==의존성 주입(DependencyInjection)==이라고 한다.
+        의존성 주입(DependencyInjection)이라고 한다.
     
-    ![[Untitled 6 3.png|Untitled 6 3.png]]
-    
-- 둘 중 무엇을 넣어야 하는지 정해야한다 그 때 사용하는 어노테이션은 ==@Primary==
+- 둘 중 무엇을 넣어야 하는지 정해야한다 그 때 사용하는 어노테이션은 @Primary
 
 ```Java
 @Repository
